# tropnn

./: .gitignore  README.md  __init__.py  backend.py  example_emnist.py  functional.py  module.py  pyproject.toml  triton_ops.py
backends/: __init__.py  _utils.py  fan_tilelang.py  fan_zig.py  pairwise_tilelang.py  pairwise_zig.py  tilelang_route.py  triton_backward.py  triton_scores.py  tropical_zig.py  zig_runtime.py
examples/: emnist.py
experimental/: __init__.py
kernels/src/: lib.zig  lut.zig  parallel.zig  simd.zig  tropical.zig
layers/: __init__.py  base.py  dictlinear.py  fan.py  pairwise.py  routing.py  surrogate.py  tropical.py  tropical_exact.py
tests/: test_backend_parity.py  test_bridge_scaling.py  test_dict.py  test_experimental_layers.py  test_import_compat.py  test_pairwise.py  test_payload_variants.py  test_routing.py  test_scaling_benchmark.py  test_tropical.py  test_tropical_core.py
tools/: analyze_two_axis.py  benchmark.py  bridge_scaling.py  launch_engram_sweep.py  launch_pairwise_sweep.py  ncu_memory_case.py  ncu_memory_sweep.py  profile.py  scaling_benchmark.py
tools/benchmarking/: __init__.py  benchmark.py  bridge_scaling.py  profile.py  scaling_benchmark.py
