[project]
name = "tropnn"
version = "0.1.0"
description = "Minimal tropical min-face neural layer library"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "LutFlow Team" }
]
keywords = ["tropical", "neural-network", "torch", "triton", "teaching"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=2.2.6",
    "torch>=2.9.1",
]

[project.optional-dependencies]
triton = [
    "triton",
]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.1.0",
]

[project.scripts]
tropnn-emnist = "tropnn.examples.emnist:main"
tropnn-benchmark = "tropnn.tools.benchmark:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = false

[tool.setuptools.package-dir]
tropnn = "."

[tool.ruff]
line-length = 150
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]